# AfterGL

./: .gitignore  AfterGL.h  CMakeLists.txt  LICENSE  README.md  install.sh  main.cpp
.github/workflows/: build.yml
include/: AfterGL.h
include/glad/: glad.h
src/: AfterGL.cpp  glad.c
